<resources>
    <string name="app_name">R3cycle Beta</string>
    <string name="r3cycle">R3cycle</string>
    <string name="community">Community</string>
    <string name="created_by_students">Created by Students</string>
    <string name="reduce">Reduce</string>
    <string name="resources">Resources</string>
    <string name="reuse">Reuse</string>
    <string name="scanner">Scanner</string>
    <string name="encyclopedia">Encyclopedia</string>
    <string name="education">Education</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="terms_title">R3cycle</string>
    <string name="terms_text">    In Accordance with city of Orlando we promise to adhere to all safety
        protocols in line with the guidelines laid out to use by the local government.
        If there should be any breach of this contract, R3cycle is therefore held responsible along
        with any involved parties.</string>
    <string name="city_of_orlando">City of Orlando</string>
    <string name="about_us">    We encourage Orlando to become a more economically friendly environment.
        Due to the rise of industrialization and expansion, the lack of preserving nature, litter prevention,
        and ethical waste disposal is extremely harmful to both the environment and human health. This app aims
        to be a step  in a long process for Orlando’s citizens and government to become proactive on these economical
        issues to solve.</string>
    <string name="educationtext">General Info: It is imperative that everyone recycles, especially with the
        increased waste that causes landfills and pollutes the ocean.
        </string>
    <string name="educationtext2">Recycling materials can lower the amount
        of pollution, therefore preserving nature’s health and in turn the population’s health as well.</string>
    <string name="educationtext3">Locations: A good website to start is Earth 911 and any recycling centers near your area.</string>
    <string name="home">Home</string>
    <string name="cardboard">Cardboard</string>
    <string name="glass">Glass</string>
    <string name="metal">Metal</string>
    <string name="paper">Paper</string>
    <string name="plastics">Plastics</string>
    <string name="product_name">Product: %1$s</string>
    <string name="packaging_details">Packaging: %1$s</string>

    <string name="recyclable">Recyclable:</string>
    <string name="nonrecyclable">NOT Recyclable:</string>
    <string name="paperboard">Paperboard</string>
    <string name="tissuebox">Tissue Boxes</string>
    <string name="folders">Heavy Weight Folders</string>
    <string name="rolls">Paper Towel / Toilet Paper Rolls</string>
    <string name="shredded">Shredded Paper</string>
    <string name="carton">Empty Milk Cartons</string>
    <string name="papercups">Paper Cups</string>
    <string name="books">Soft Cover Books</string>
    <string name="officepaper">Office Paper</string>
    <string name="newspaper">Newspaper</string>
    <string name="papertowel">Paper Towels</string>
    <string name="waxpaper">Wax Paper</string>
    <string name="wrappingpaper">Wrapping Paper</string>
    <string name="tissuepaper">Tissue Paper</string>
    <string name="napkins">Napkins</string>
    <string name="pizzabox">Pizza Box</string>
    <string name="corrrugated">Corrugated Cardboard</string>
    <string name="paperbag">Brown Paper Bag</string>
    <string name="boxboard">Box Board</string>
    <string name="bubblewrap">Bubble Wrap Boxes</string>
    <string name="waxbox">Wax/Waterproof Boxes</string>
    <string name="clear">Clear Glass</string>
    <string name="green">Green Glass</string>
    <string name="brown">Brown Glass</string>
    <string name="blue">Blue Glass</string>
    <string name="wine">Wine/Beer Bottles</string>
    <string name="containers">Glass Food Containers</string>
    <string name="lightbulbs">Lightbulbs</string>
    <string name="mirrors">Mirror Glass</string>
    <string name="window">Window Glass</string>
    <string name="ceramic">Ceramics</string>
    <string name="crystal">Crystal</string>
    <string name="plasticsnum">Plastics Numbers 1–7</string>
    <string name="plasticcups">Plastic Cups</string>
    <string name="milkcontainer">Milk Container</string>
    <string name="soapjug">Soap Jugs</string>
    <string name="grocerybags">Grocery Bags</string>
    <string name="sodabottles">Soda Bottles</string>
    <string name="foodcontainers">Food Containers</string>
    <string name="plasticbag">Plastic Baggies</string>
    <string name="plasticcut">Plastic Cutlery</string>
    <string name="foamcontainers">Foam Containers</string>
    <string name="alumtakeout">Aluminum Take Out Containers</string>
    <string name="alumtray">Aluminum Plates/Trays</string>
    <string name="cookware">Kitchen Cookware</string>
    <string name="metalbev">Metal Beverage Containers</string>
    <string name="metalfood">Metal Food Containers</string>
    <string name="aluminumfoil">Aluminum Foil</string>
    <string name="motoroil">Motor Oil Cans</string>
    <string name="paintcan">Paint Cans</string>

    <!-- Added missing string resources for button labels -->
    <string name="report_bugs">Report Bugs</string>
    <string name="rate_this_app">Rate This App</string>

    <!-- New About Us button label -->
    <string name="about_us_button">About Us</string>
</resources>

