<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="0dp"
    android:background="@color/light_green">

    <!-- Lighter Green Bar -->

    <LinearLayout
        android:id="@+id/topLightGreenBar"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="@color/green"
        android:layout_margin="0dp"
        android:orientation="horizontal" />

    <!-- Main Content Section -->

    <!-- Resources Button -->
    <Button
        android:id="@+id/plasticsTitle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/rounded_button_left_sqaured_background"
        android:drawableStart="@drawable/book"
        android:text="@string/paper"
        android:textSize="20sp" />

    <!-- Background -->

    <!-- Lighter Green Bar -->

    <!-- Back Button -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/light_green">

        <TextView
            android:id="@+id/recyclableText2"
            android:layout_width="115dp"
            android:layout_height="36dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="280dp"
            android:text="@string/recyclable"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/recyclableText"
            android:layout_width="115dp"
            android:layout_height="36dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="280dp"
            android:text="@string/recyclable"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/paperboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="145dp"
            android:layout_marginBottom="18dp"
            android:text="@string/paperboard"
            app:layout_constraintBottom_toTopOf="@+id/tissueBox"
            app:layout_constraintEnd_toStartOf="@+id/carton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclableText" />

        <TextView
            android:id="@+id/tissueBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginEnd="136dp"
            android:layout_marginBottom="18dp"
            android:text="@string/tissuebox"
            app:layout_constraintBottom_toTopOf="@+id/heavyFolder"
            app:layout_constraintEnd_toStartOf="@+id/paperCup"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/heavyFolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginEnd="83dp"
            android:layout_marginBottom="19dp"
            android:text="@string/folders"
            app:layout_constraintBottom_toTopOf="@+id/paperRoll"
            app:layout_constraintEnd_toStartOf="@+id/books"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/paperRoll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginEnd="19dp"
            android:layout_marginBottom="22dp"
            android:text="@string/rolls"
            app:layout_constraintBottom_toTopOf="@+id/shreddedPaper"
            app:layout_constraintEnd_toStartOf="@+id/officePaper"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/shreddedPaper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginEnd="118dp"
            android:layout_marginBottom="61dp"
            android:text="@string/shredded"
            app:layout_constraintBottom_toTopOf="@+id/nonrecyclable"
            app:layout_constraintEnd_toStartOf="@+id/newspaper"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/carton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="18dp"
            android:text="@string/carton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.106" />

        <TextView
            android:id="@+id/paperCup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="112dp"
            android:layout_marginBottom="576dp"
            android:text="@string/papercups"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/books"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="76dp"
            android:layout_marginBottom="532dp"
            android:text="@string/books"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/officePaper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="108dp"
            android:layout_marginBottom="496dp"
            android:text="@string/officepaper"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/newspaper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="112dp"
            android:layout_marginBottom="460dp"
            android:text="@string/newspaper"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/nonrecyclable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="231dp"
            android:text="@string/nonrecyclable"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shreddedPaper" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:layout_marginEnd="132dp"
            android:layout_marginBottom="324dp"
            android:text="@string/papertowel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView24"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="276dp"
            android:text="@string/waxpaper"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:layout_marginEnd="290dp"
            android:layout_marginBottom="224dp"
            android:text="@string/wrappingpaper"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="144dp"
            android:layout_marginBottom="324dp"
            android:text="@string/napkins"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="112dp"
            android:layout_marginBottom="284dp"
            android:text="@string/tissuepaper"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/bottomLightGreenBar"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_margin="0dp"
        android:background="@color/green"
        android:orientation="horizontal" />

    <!-- Dark Green Bar (bottom) -->

</LinearLayout>