<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="0dp"
    android:background="@color/light_green">

    <!-- Lighter Green Bar -->

    <LinearLayout
        android:id="@+id/topLightGreenBar"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="@color/green"
        android:layout_margin="0dp"
        android:orientation="horizontal" />

    <!-- Main Content Section -->

    <!-- Resources Button -->
    <Button
        android:id="@+id/plasticsTitle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/rounded_button_left_sqaured_background"
        android:drawableStart="@drawable/book"
        android:text="@string/glass"
        android:textSize="20sp" />

    <!-- Background -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/light_green">

        <TextView
            android:id="@+id/recyclableText2"
            android:layout_width="115dp"
            android:layout_height="36dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="280dp"
            android:text="@string/recyclable"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/recyclableText"
            android:layout_width="115dp"
            android:layout_height="36dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="280dp"
            android:text="@string/recyclable"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/paperboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="145dp"
            android:layout_marginBottom="18dp"
            android:text="@string/clear"
            app:layout_constraintBottom_toTopOf="@+id/tissueBox"
            app:layout_constraintEnd_toStartOf="@+id/carton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclableText" />

        <TextView
            android:id="@+id/tissueBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginEnd="143dp"
            android:layout_marginBottom="19dp"
            android:text="@string/green"
            app:layout_constraintBottom_toTopOf="@+id/heavyFolder"
            app:layout_constraintEnd_toStartOf="@+id/paperCup"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/heavyFolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginEnd="142dp"
            android:layout_marginBottom="140dp"
            android:text="@string/brown"
            app:layout_constraintBottom_toTopOf="@+id/nonrecyclable"
            app:layout_constraintEnd_toStartOf="@+id/books"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/carton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="62dp"
            android:layout_marginEnd="107dp"
            android:layout_marginBottom="16dp"
            android:text="@string/blue"
            app:layout_constraintBottom_toTopOf="@+id/paperCup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/paperCup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="18dp"
            android:text="@string/containers"
            app:layout_constraintBottom_toTopOf="@+id/books"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/books"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="58dp"
            android:layout_marginBottom="199dp"
            android:text="@string/wine"
            app:layout_constraintBottom_toTopOf="@+id/textView24"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/nonrecyclable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="140dp"
            android:layout_marginEnd="231dp"
            android:text="@string/nonrecyclable"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/heavyFolder" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="152dp"
            android:layout_marginBottom="18dp"
            android:text="@string/lightbulbs"
            app:layout_constraintBottom_toTopOf="@+id/textView22"
            app:layout_constraintEnd_toStartOf="@+id/textView24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nonrecyclable" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:layout_marginEnd="142dp"
            android:layout_marginBottom="16dp"
            android:text="@string/mirrors"
            app:layout_constraintBottom_toTopOf="@+id/textView23"
            app:layout_constraintEnd_toStartOf="@+id/textView25"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:layout_marginEnd="301dp"
            android:layout_marginBottom="155dp"
            android:text="@string/window"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="114dp"
            android:layout_marginBottom="17dp"
            android:text="@string/ceramic"
            app:layout_constraintBottom_toTopOf="@+id/textView25"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="127dp"
            android:layout_marginBottom="191dp"
            android:text="@string/crystal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Lighter Green Bar -->

    <!-- Back Button -->

    <LinearLayout
        android:id="@+id/bottomLightGreenBar"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_margin="0dp"
        android:background="@color/green"
        android:orientation="horizontal" />

    <!-- Dark Green Bar (bottom) -->

</LinearLayout>