<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="0dp"
    android:background="@color/light_green">

    <!-- Lighter Green Bar -->

    <LinearLayout
        android:id="@+id/topLightGreenBar"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="@color/green"
        android:layout_margin="0dp"
        android:orientation="horizontal" />

    <!-- Main Content Section -->

    <!-- Resources Button -->
    <Button
        android:id="@+id/plasticsTitle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/rounded_button_left_sqaured_background"
        android:drawableStart="@drawable/book"
        android:text="@string/plastics"
        android:textSize="20sp" />

    <!-- Background -->

    <!-- Lighter Green Bar -->

    <!-- Back Button -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/light_green">

        <TextView
            android:id="@+id/recyclableText2"
            android:layout_width="115dp"
            android:layout_height="36dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="280dp"
            android:text="@string/recyclable"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/recyclableText"
            android:layout_width="115dp"
            android:layout_height="36dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="280dp"
            android:text="@string/recyclable"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/paperboard"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginStart="19dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="80dp"
            android:text="@string/plasticsnum"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/carton"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclableText2"
            app:layout_constraintVertical_bias="0.104" />

        <TextView
            android:id="@+id/tissueBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plasticcups"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.28"
            tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/heavyFolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="129dp"
            android:layout_marginBottom="444dp"
            android:text="@string/milkcontainer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/books"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/carton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="128dp"
            android:layout_marginBottom="40dp"
            android:text="@string/soapjug"
            app:layout_constraintBottom_toTopOf="@+id/paperCup"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/paperCup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="92dp"
            android:layout_marginBottom="44dp"
            android:text="@string/foodcontainers"
            app:layout_constraintBottom_toTopOf="@+id/books"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/books"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="108dp"
            android:layout_marginBottom="444dp"
            android:text="@string/sodabottles"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/nonrecyclable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="388dp"
            android:layout_marginEnd="231dp"
            android:text="@string/nonrecyclable"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="121dp"
            android:layout_marginBottom="18dp"
            android:text="@string/plasticbag"
            app:layout_constraintBottom_toTopOf="@+id/textView22"
            app:layout_constraintEnd_toStartOf="@+id/textView24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nonrecyclable" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="164dp"
            android:text="@string/plasticcut"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="224dp"
            android:text="@string/foamcontainers"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/bottomLightGreenBar"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_margin="0dp"
        android:background="@color/green"
        android:orientation="horizontal" />

    <!-- Dark Green Bar (bottom) -->

</LinearLayout>